--- a/src/components/PageFooter/PageFooter.css
+++ b/src/components/PageFooter/PageFooter.css
@@ -120,7 +120,7 @@ body {
 }
 
 .heart {
-  color: #2f2f2f;
+  color: white;
 }
 
 @media screen and (min-width: 24.375em) {
